[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/SourceHanSerifTW-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://puzzle_storehouse.gd" type="Script" id=2]
[ext_resource path="res://底圖/拼圖地圖.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/關閉按鈕一版.png-0877cc0f427a3e02d4fee65289d0c79e.stex"

[node name="puzzle_storehouse" type="Sprite"]
position = Vector2( 242.11, 134.196 )
scale = Vector2( 0.440225, 0.440225 )
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -38.7649, -0.533337 )
scale = Vector2( 0.741763, 0.977652 )
texture = ExtResource( 3 )

[node name="total_puzzle_type" type="Label" parent="."]
margin_left = -204.024
margin_top = -150.045
margin_right = 71.9765
margin_bottom = 95.9549
custom_fonts/font = SubResource( 2 )
text = "一"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unfinished_puzzle_type" type="Label" parent="."]
margin_left = 7.1781
margin_top = -150.055
margin_right = 306.178
margin_bottom = -35.0554
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="special_puzzle" type="Label" parent="."]
margin_left = -204.594
margin_top = 57.9137
margin_right = 77.4059
margin_bottom = 122.914
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="Sprite" parent="."]
position = Vector2( 197.235, -161.466 )
texture = SubResource( 5 )

[node name="close2" type="TextureButton" parent="."]
margin_left = 178.792
margin_top = -172.728
margin_right = 208.792
margin_bottom = -148.728
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="close2" to="." method="_on_close2_pressed"]
